; ModuleID = '/home/carl/AnghaBench/exploitdb/shellcodes/windows_x86-64/extr_40549.c_main.c'
source_filename = "/home/carl/AnghaBench/exploitdb/shellcodes/windows_x86-64/extr_40549.c_main.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@shellcode = common dso_local global i64 0, align 8
@.str = private unnamed_addr constant [27 x i8] c"shellcode length %d bytes\0A\00", align 1
@PAGE_EXECUTE_READWRITE = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @main() #0 {
  %1 = alloca i32, align 4
  %2 = alloca i32, align 4
  %3 = load i64, i64* @shellcode, align 8
  %4 = call i32 @strlen(i64 %3)
  store i32 %4, i32* %1, align 4
  store i32 0, i32* %2, align 4
  %5 = load i32, i32* %1, align 4
  %6 = call i32 @printf(i8* getelementptr inbounds ([27 x i8], [27 x i8]* @.str, i64 0, i64 0), i32 %5)
  %7 = load i64, i64* @shellcode, align 8
  %8 = load i32, i32* %1, align 4
  %9 = load i32, i32* @PAGE_EXECUTE_READWRITE, align 4
  %10 = call i32 @VirtualProtect(i64 %7, i32 %8, i32 %9, i32* %2)
  %11 = load i64, i64* @shellcode, align 8
  %12 = inttoptr i64 %11 to i32 (...)*
  %13 = call i32 (...) %12()
  ret i32 0
}

declare dso_local i32 @strlen(i64) #1

declare dso_local i32 @printf(i8*, i32) #1

declare dso_local i32 @VirtualProtect(i64, i32, i32, i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
